# duck-budget

./: Cargo.toml  Dioxus.toml  duck-budget.sqlite3
assets/styling/: main.css
migrations/2025-05-21-003048_create_initial_tables/: down.sql  up.sql
src/: account.rs  backend.rs  category.rs  load_defaults.rs  main.rs  schema.rs  transaction.rs
src/components/: account.rs  mod.rs  transaction.rs
src/core/: connection.rs  mod.rs  schema.rs
src/core/data/: account.rs  category.rs  mod.rs  transaction.rs
src/core/models/: account.rs  category.rs  mod.rs  transactions.rs
src/data/: account.rs  category.rs  mod.rs  transaction.rs
src/frontend/components/: account.rs  mod.rs  transaction.rs
