[package]
name = "duck_budget"
version = "0.1.0"
authors = ["CodeDuck <kaelscion@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
diesel = {version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"]}
dioxus = { version = "0.6.0", features = ["fullstack"] }
dotenvy = "0.15.7"
uuid = {version = "1.17.0", features = ["v4", "v7", "js"]}
rusqlite = { version = "0.32.1", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
