[package]
name = "duck_budget"
version = "0.1.0"
authors = ["CodeDuck <kaelscion@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
diesel = {version = "2.2.0", features = ["postgres", "r2d2"]}
dioxus = { version = "0.6.0", features = ["fullstack"] }
dotenvy = "0.15.7"
uuid = {version = "1.18.0", features = ["v4", "v7", "js"]}
server_fn = "0.8.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-std = "1.13.1"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
